# logger-colored-dev

./: .env  .gitignore  README.md  pyproject.toml
src/: colored_formater.py  main.py  test_log.py  utils.py
